# woUpgrade

./: .gitignore  README.md  pyproject.toml
doc/: AI_AGENT_CONTEXT.md  DATA_CONTRACT.md  PACKAGE_MAP.md
src/woupgrade/data/: rubric.json  updates_2026.json
src/woupgrade/plots/: __init__.py  update_growth.py
src/woupgrade/script/: update_growth.py
