[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woupgrade"
version = "0.1.0"
description = "Formula 1 car update complexity tracking from presentation submissions."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { email = "zhxutong517@gmail.com" }
]
dependencies = [
  "matplotlib>=3.5.1,<4.0.0",
  "pandas>=1.4.1,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/woupgrade"]

[tool.ruff]
line-length = 100
src = ["src"]
